fix(ui): sidebar not showing

--- a/styles/global.css
+++ b/styles/global.css
@@ -29,7 +29,7 @@
   }
 
   h1 {
-    @apply text-4xl lg:text-6xl xl:text-8xl !important;
+    @apply text-4xl md:text-5xl lg:text-6xl xl:text-7xl 2xl:text-8xl !important;
   }
 
   h2 {
